# ruruDown

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY_POLICY.md  README.md  THIRD_PARTY_LICENSES.md  biliexport_project_framework.md  build.gradle.kts  gradlew  gradlew.bat  ruruDown_architecture.md  settings.gradle.kts  关于.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/bilexport/privileged/shizuku/: IBiliFileService.aidl
app/src/main/java/com/example/bilexport/app/: App.kt  MainActivity.kt  Navigation.kt
app/src/main/java/com/example/bilexport/core/constants/: Defaults.kt  Paths.kt  Tags.kt
app/src/main/java/com/example/bilexport/core/model/: CoverData.kt  CoverRequest.kt  ExportErrorCode.kt  ExportFailureDetail.kt  ExportJob.kt  ExportJobStatus.kt  ExportState.kt  ExportType.kt  MediaItem.kt  MediaSource.kt  RepeatExportPolicy.kt  ScanState.kt  ServiceInitState.kt
app/src/main/java/com/example/bilexport/core/util/: FileNameSanitizer.kt  HashUtil.kt  Result.kt  TimeFormat.kt
app/src/main/java/com/example/bilexport/data/cache/: CoverCache.kt  TempPathManager.kt
app/src/main/java/com/example/bilexport/data/db/: AppDatabase.kt  ExportJobDao.kt  ExportJobEntity.kt  MediaItemDao.kt  MediaItemEntity.kt
app/src/main/java/com/example/bilexport/native/: CMakeLists.txt
app/src/main/java/com/example/bilexport/native/jni/: ffmpeg_bridge.cpp  ffmpeg_bridge.h  log_bridge.cpp
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+55 files in other folders)
